微修正、ソース追加

--- a/hoge/Red_Wine_Quality.ipynb
+++ b/hoge/Red_Wine_Quality.ipynb
@@ -26,12 +26,7 @@
    "id": "695a9efd",
    "metadata": {},
    "source": [
-    "csvファイルデータフレームオブジェクトにする\n",
-    "\n",
-    "ToDo: 公開前に下のパスの本名を隠す\n",
-    "ToDo: . Cortez, A. Cerdeira, F. Almeida, T. Matos and J. Reis.\n",
-    "Modeling wine preferences by data mining from physicochemical properties. In Decision Support Systems, Elsevier, 47(4):547-553, 2009.\n",
-    "これをReadmeに書く"
+    "csvファイルデータフレームオブジェクトにする"
    ]
   },
   {
